Фикс index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
         </header>
         <main class="content">
-          <div class="slider">
+          <section class="slider">
             <ul>
               <li><h2></h2><a class="btn" href="#"></a></li>
               <li><h2></h2><a class="btn" href="#"></a></li>
@@ -39,8 +39,8 @@
               <li></li>
               <li></li>
             </ul>
-          </div>
-          <div class="banners clearfix">
+          </section>
+          <section class="banners clearfix">
             <div class="banner">
               <b>Малинка даром!</b>
               <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
@@ -51,8 +51,8 @@
               <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
               <a class="btn" href="#"></a>
             </div>
-          </div>
-          <div class="hits clearfix">
+          </section>
+          <section class="hits clearfix">
             <div class="hit">
               <a href="" class="hit_photo">
                 <img src="" alt="">
@@ -97,8 +97,8 @@
 
               </div>
             </div>
-          </div>
-          <div class="about_shop clearfix">
+          </section>
+          <section class="about_shop clearfix">
             <h2>Магазин Глейси  — это онлайн и офлайн магазин по продаже мороженого
               собственного производства на развес</h2>
             <div class="about_shop_items">
@@ -116,8 +116,8 @@
               термопаке, которая не дает мороженому растаять в пути и позволяет ему
               сохранить свой превосходный вкус.</p>
             </div>
-          </div>
-          <div class="widgets clearfix">
+          </section>
+          <section class="widgets clearfix">
             <div class="widget">
               <span>Новое в нашем блоге</span>
               <h3>10  способов сервировки фруктовых щербетов к столу</h3>
@@ -133,8 +133,8 @@
                 </form>
               </div>
             </div>
-          </div>
-          <div class="location">
+          </section>
+          <section class="location">
             <img class="location_map" src="" alt="">
             <img class="location_icon" src="" alt="">
             <div class="location_address">
@@ -145,7 +145,7 @@
               <span>(с 10 до 20 ежедневно)</span>
               <a class="btn" href="#"></a>
             </div>
-          </div>
+          </section>
         </main>
         <footer class="footer clearfix">
           <section class="footer_social">
