Сделана стилизация главной страницы кроме всплывающих окон и слайлера

--- a/index.html
+++ b/index.html
@@ -57,49 +57,69 @@
               <a class="btn" href="#">Хочу шоколадки!</a>
             </div>
           </section>
-          <section class="hits clearfix">
-            <div class="hit">
-              <a href="" class="hit_photo">
-                <img src="" alt="">
-              </a>
-              <div class="hit_price">
-
+          <section class="hit_products clearfix">
+            <div class="product">
+              <div class="product_prew">
+                <div class="product_img_wrap">
+                  <img src="img/hit-photo-1.png" width="267" height="267" alt="Сливочное мороженое">
+                </div>
+                <div class="product_price">
+                  <span class="product_price_cost">310₽</span><span class="product_price_amount">/кг</span>
+                </div>
               </div>
-              <div class="hit_title">
-
+              <div class="product_desc">
+                <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
               </div>
-            </div>
-            <div class="hit">
-              <a href="" class="hit_photo">
-                <img src="" alt="">
-              </a>
-              <div class="hit_price">
-
-              </div>
-              <div class="hit_title">
-
+              <div class="product_hover_wrap">
+                <a class="btn" href="#">Быстрый просмотр!</a>
               </div>
             </div>
-            <div class="hit">
-              <a href="" class="hit_photo">
-                <img src="" alt="">
-              </a>
-              <div class="hit_price">
-
+            <div class="product">
+              <div class="product_prew">
+                <div class="product_img_wrap">
+                  <img src="img/hit-photo-2.png" width="267" height="267" alt="Сливочное мороженое">
+                </div>
+                <div class="product_price">
+                  <span class="product_price_cost">380₽</span><span class="product_price_amount">/кг</span>
+                </div>
               </div>
-              <div class="hit_title">
-
+              <div class="product_desc">
+                <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+              </div>
+              <div class="product_hover_wrap">
+                <a class="btn" href="#">Быстрый просмотр!</a>
               </div>
             </div>
-            <div class="hit">
-              <a href="" class="hit_photo">
-                <img src="" alt="">
-              </a>
-              <div class="hit_price">
-
+            <div class="product">
+              <div class="product_prew">
+                <div class="product_img_wrap">
+                  <img src="img/hit-photo-3.png" width="267" height="267" alt="Сливочное мороженое">
+                </div>
+                <div class="product_price">
+                  <span class="product_price_cost">355₽</span><span class="product_price_amount">/кг</span>
+                </div>
               </div>
-              <div class="hit_title">
-
+              <div class="product_desc">
+                <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+              </div>
+              <div class="product_hover_wrap">
+                <a class="btn" href="#">Быстрый просмотр!</a>
+              </div>
+            </div>
+            <div class="product">
+              <div class="product_prew">
+                <div class="product_img_wrap">
+                  <img src="img/hit-photo-4.png" width="267" height="267" alt="Сливочное мороженое">
+                </div>
+                <div class="product_price">
+                  <span class="product_price_cost">415₽</span><span class="product_price_amount">/кг</span>
+                </div>
+              </div>
+              <div class="product_desc">
+                <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+              </div>
+              <div class="product_hover_wrap">
+                <a class="btn" href="#">Быстрый просмотр!</a>
               </div>
             </div>
           </section>
@@ -107,67 +127,69 @@
             <h2>Магазин Глейси  — это онлайн и офлайн магазин по продаже мороженого
               собственного производства на развес</h2>
             <div class="about_shop_items">
-              <p class="about_shop_item">Все наше мороженое изготавливается на собственном производстве, с
+              <p class="about_shop_ice_cream">Все наше мороженое изготавливается на собственном производстве, с
                 использованием современного оборудования и проверенных временем технологий.</p>
-              <p class="about_shop_item">Для приготовления мороженого используются настоящие сливки и молоко
+              <p class="about_shop_sheet">Для приготовления мороженого используются настоящие сливки и молоко
                 высочайшего качества. Все дополнительные ингредиенты и добавки произведены из
                 натурального, экологически чистого сырья. </p>
             </div>
             <div class="about_shop_items">
-              <p class="about_shop_item">Закупка ингредиентов  производится только у проверенных фермерских
+              <p class="about_shop_cow">Закупка ингредиентов  производится только у проверенных фермерских
                 хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-              <p class="about_shop_item">
+              <p class="about_shop_grad">
               Доставка нашего мороженого до заказчиков осуществляется в специальном
               термопаке, которая не дает мороженому растаять в пути и позволяет ему
               сохранить свой превосходный вкус.</p>
             </div>
           </section>
           <section class="widgets clearfix">
-            <div class="widget">
+            <div class="widget widget_blog">
               <span>Новое в нашем блоге</span>
-              <h3>10  способов сервировки фруктовых щербетов к столу</h3>
+              <h3><a href="#">10 способов сервировки<br>фруктовых щербетов<br>к столу</a></h3>
             </div>
-            <div class="widget">
-              <div class="widget_email">
+            <div class="widget widget_email">
+              <div class="widget_email_inner">
                 <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего
                   самого вкусного, что у нас происходит. Обещаем не спамить и не слать
                   всякой не нужной ерунды. Честно =) </p>
                 <form class="" action="index.html" method="post">
-                  <input type="text" name="email" value="" placeholder="">
+                  <input type="text" name="email" value="" placeholder="Элктронная почта">
                   <button class="btn" type="submit" name="button">Отправить</button>
                 </form>
               </div>
             </div>
           </section>
-          <section class="location">
-            <img class="location_map" src="" alt="">
-            <img class="location_icon" src="" alt="">
-            <div class="location_address">
-              <span>Адрес главного офиса и офлайн магазина:</span>
-              <p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
-              <span>Для заказов по телефону:</span>
-              <p>8 812 450-25-25</p>
-              <span>(с 10 до 20 ежедневно)</span>
+          <section class="location_map">
+            <div class="location_map_icon">
+              <img src="img/location-icon.png" width="218" height="142" alt="">
+            </div>
+            <div class="location_map_address">
+              <p>Адрес главного офиса и<br>офлайн магазина:<br><strong>ул. Большая Конюшенная 19/8, Санкт-Петербург</strong><br></p>
+              <p>Для заказов по телефону:<br><strong>8 812 450-25-25</strong><br>(с 10 до 20 ежедневно)</p>
               <a class="btn" href="#">Форма обратной связи</a>
             </div>
           </section>
         </main>
         <footer class="footer clearfix">
           <section class="footer_social">
-            <a class="footer_social_btn" href="#">твиттер</a>
-            <a class="footer_social_btn" href="#">инста</a>
-            <a class="footer_social_btn" href="#">фейсбук</a>
-            <a class="footer_social_btn" href="#">вк</a>
+            <a class="footer_social_btn twitter" href="#">твиттер</a>
+            <a class="footer_social_btn insta" href="#">инста</a>
+            <a class="footer_social_btn fb" href="#">фейсбук</a>
+            <a class="footer_social_btn vk" href="#">вк</a>
           </section>
-          <section class="footer_links">
-            <a href="#">Для поставщиков</a>
-            <a href="#">Наши документы</a>
-            <a href="#">О производстве</a>
-            <a href="#">Экологические стандарты</a>
+          <section class="footer_links clearfix">
+            <ul>
+              <li class="active"><a href="#">Для поставщиков</a></li>
+              <li><a href="#">Наши документы</a></li>
+            </ul>
+            <ul>
+              <li><a href="#">О производстве</a></li>
+              <li><a href="#">Экологические стандарты</a></li>
+            </ul>
           </section>
           <section class="footer_copyright">
-            <a href="#"><img src="img/htmlacademy-logo.svg" alt="Html Academy"></a>
-            <p>Сделано в HTML Academy © 2016</p>
+            <a href="#"><img src="img/htmlacademy-logo.svg" width="108" height="37" alt="Html Academy"></a>
+            <p>Сделано в <a href="#">HTML Academy</a> © 2016</p>
           </section>
         </footer>
       </div>
