--- a/index.html
+++ b/index.html
@@ -8,21 +8,30 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
+    <input class="controls" type="radio" name="point" id="slide1" checked>
+    <input class="controls" type="radio" name="point" id="slide2">
+    <input class="controls" type="radio" name="point" id="slide3">
     <div class="container">
       <div class="content_wrapper">
         <header class="header clearfix">
           <nav class="navigation clearfix">
             <img class="gllacy_logo" src="img/gllacy-logo.svg" alt="Магазин Глейси" width="153" height="63">
             <ul>
-              <li><a href="#">Каталог</a></li>
-              <li><a href="#">Доставка и оплата</a></li>
-              <li><a href="#">О компании</a></li>
+              <li class="navigation_item">
+                <a href="#" class="navigation_link">Каталог</a>
+                <div class="navigation_popup_wrap">
+                  <ul class="navigation_popup">
+                    <li><a class="navigation_popup_title" href="#">Новинки</a></li>
+                    <li><a class="navigation_popup_link" href="catalog.html">Сливочное</a></li>
+                    <li><a class="navigation_popup_link" href="#">Щербеты</a></li>
+                    <li><a class="navigation_popup_link" href="#">Фруктовый лед</a></li>
+                    <li><a class="navigation_popup_link" href="#">Мелорин</a></li>
+                  </ul>
+                </div>
+              </li>
+              <li class="navigation_item"><a class="navigation_link" href="#">Доставка и оплата</a></li>
+              <li class="navigation_item"><a class="navigation_link" href="#">О компании</a></li>
             </ul>
-            <!-- меню для каталога <ul>
-              <li><span  class="active">Каталог</span></li>
-              <li><a href="#">Доставка и оплата</a></li>
-              <li><a href="#">О компании</a></li>
-            </ul>-->
           </nav>
           <div class="user_block">
             <a class="search" href="#"></a>
@@ -34,16 +43,24 @@
         <main class="content">
           <section class="slider">
             <ul class="slider_slides">
-              <li class="slider_slide">
+              <li class="slide slide1">
                 <h2 class="slide_title">Крем-брюле и пломбир с малиновым джемом</h2>
                 <a class="btn btn_big" href="#">Давайте оба!</a>
               </li>
+              <li class="slide slide2">
+                <h2 class="slide_title">Шоколадный пломбир и лимонный сорбет </h2>
+                <a class="btn btn_big" href="#">Давайте оба!</a>
+              </li>
+              <li class="slide slide3">
+                <h2 class="slide_title">Пломбир с помадкой и клубничный щербет</h2>
+                <a class="btn btn_big" href="#">Давайте оба!</a>
+              </li>
             </ul>
-            <!--<ul>
-              <li></li>
-              <li></li>
-              <li></li>
-            </ul>-->
+            <div class="slider_controls">
+              <label class="slider_control_item control_item1" for="slide1"></label>
+              <label class="slider_control_item control_item2" for="slide2"></label>
+              <label class="slider_control_item control_item3" for="slide3"></label>
+            </div>
           </section>
           <section class="banners clearfix">
             <div class="banner rasberry">
@@ -61,7 +78,7 @@
             <div class="product">
               <div class="product_prew">
                 <div class="product_img_wrap">
-                  <img src="img/hit-photo-1.png" width="267" height="267" alt="Сливочное мороженое">
+                  <img src="img/photo-1.png" width="267" height="267" alt="Сливочное мороженое">
                 </div>
                 <div class="product_price">
                   <span class="product_price_cost">310₽</span><span class="product_price_amount">/кг</span>
@@ -77,7 +94,7 @@
             <div class="product">
               <div class="product_prew">
                 <div class="product_img_wrap">
-                  <img src="img/hit-photo-2.png" width="267" height="267" alt="Сливочное мороженое">
+                  <img src="img/photo-2.png" width="267" height="267" alt="Сливочное мороженое">
                 </div>
                 <div class="product_price">
                   <span class="product_price_cost">380₽</span><span class="product_price_amount">/кг</span>
@@ -93,7 +110,7 @@
             <div class="product">
               <div class="product_prew">
                 <div class="product_img_wrap">
-                  <img src="img/hit-photo-3.png" width="267" height="267" alt="Сливочное мороженое">
+                  <img src="img/photo-3.png" width="267" height="267" alt="Сливочное мороженое">
                 </div>
                 <div class="product_price">
                   <span class="product_price_cost">355₽</span><span class="product_price_amount">/кг</span>
@@ -109,7 +126,7 @@
             <div class="product">
               <div class="product_prew">
                 <div class="product_img_wrap">
-                  <img src="img/hit-photo-4.png" width="267" height="267" alt="Сливочное мороженое">
+                  <img src="img/photo-4.png" width="267" height="267" alt="Сливочное мороженое">
                 </div>
                 <div class="product_price">
                   <span class="product_price_cost">415₽</span><span class="product_price_amount">/кг</span>
@@ -153,7 +170,7 @@
                   самого вкусного, что у нас происходит. Обещаем не спамить и не слать
                   всякой не нужной ерунды. Честно =) </p>
                 <form class="" action="index.html" method="post">
-                  <input type="text" name="email" value="" placeholder="Элктронная почта">
+                  <input type="text" name="email" value="" placeholder="Электронная почта">
                   <button class="btn" type="submit" name="button">Отправить</button>
                 </form>
               </div>
@@ -189,10 +206,30 @@
           </section>
           <section class="footer_copyright">
             <a href="#"><img src="img/htmlacademy-logo.svg" width="108" height="37" alt="Html Academy"></a>
-            <p>Сделано в <a href="#">HTML Academy</a> © 2016</p>
+            <p>Сделано в <a href="#">HTML Academy</a> © 2019</p>
           </section>
         </footer>
       </div>
     </div>
+    <div class="feedback_popup">
+      <button class="popup_close" type="button" name="button"></button>
+      <h3>Мы  обязательно вам ответим!</h3>
+      <form class="feedback_form" action="index.html" method="post">
+        <div class="input_wrap">
+          <input id="user_name" type="text" name="name" placeholder="Как вас зовут?" required>
+          <label for="user_name">Как вас зовут?</label>
+        </div>
+        <div class="input_wrap">
+          <input id="user_email" type="email" name="email" placeholder="Ваша почта для ответа?" required>
+          <label for="user_email">Ваша почта для ответа?</label>
+        </div>
+        <div class="input_wrap">
+          <textarea id="user_mess" name="message" placeholder="Напишите что-нибудь..." required></textarea>
+          <label for="user_mess">Напишите что-нибудь...</label>
+        </div>
+        <button class="btn" type="submit" name="button">Отправить</button>
+      </form>
+    </div>
+    <div class="popup_overlay"></div>
   </body>
 </html>
