--- a/index.html
+++ b/index.html
@@ -170,7 +170,10 @@
                   самого вкусного, что у нас происходит. Обещаем не спамить и не слать
                   всякой не нужной ерунды. Честно =) </p>
                 <form class="" action="index.html" method="post">
-                  <input type="text" name="email" value="" placeholder="Электронная почта">
+                  <div class="input_wrap">
+                    <input id="email_sub" type="email" name="email" value="" placeholder="Электронная почта">
+                    <label for="email_sub">Электронная почта</label>
+                  </div>
                   <button class="btn" type="submit" name="button">Отправить</button>
                 </form>
               </div>
@@ -183,7 +186,7 @@
             <div class="location_map_address">
               <p>Адрес главного офиса и<br>офлайн магазина:<br><strong>ул. Большая Конюшенная 19/8, Санкт-Петербург</strong><br></p>
               <p>Для заказов по телефону:<br><strong>8 812 450-25-25</strong><br>(с 10 до 20 ежедневно)</p>
-              <a class="btn" href="#">Форма обратной связи</a>
+              <button class="feedback_btn btn" type="button">Форма обратной связи</button>
             </div>
           </section>
         </main>
@@ -216,20 +219,21 @@
       <h3>Мы  обязательно вам ответим!</h3>
       <form class="feedback_form" action="index.html" method="post">
         <div class="input_wrap">
-          <input id="user_name" type="text" name="name" placeholder="Как вас зовут?" required>
+          <input id="user_name" type="text" name="name" placeholder="Как вас зовут?">
           <label for="user_name">Как вас зовут?</label>
         </div>
         <div class="input_wrap">
-          <input id="user_email" type="email" name="email" placeholder="Ваша почта для ответа?" required>
+          <input id="user_email" type="email" name="email" placeholder="Ваша почта для ответа?">
           <label for="user_email">Ваша почта для ответа?</label>
         </div>
         <div class="input_wrap">
-          <textarea id="user_mess" name="message" placeholder="Напишите что-нибудь..." required></textarea>
+          <textarea id="user_mess" name="message" placeholder="Напишите что-нибудь..."></textarea>
           <label for="user_mess">Напишите что-нибудь...</label>
         </div>
-        <button class="btn" type="submit" name="button">Отправить</button>
+        <button class="btn" type="submit">Отправить</button>
       </form>
     </div>
     <div class="popup_overlay"></div>
+    <script src="js/popup.js"></script>
   </body>
 </html>
