--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Магазин Глейси</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.min.css">
   </head>
   <body>
     <input class="controls" type="radio" name="point" id="slide1" checked>
@@ -253,6 +253,6 @@
       </form>
     </div>
     <div class="popup_overlay"></div>
-    <script src="js/popup.js"></script>
+    <script src="js/popup.min.js"></script>
   </body>
 </html>
